--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,20 @@
         android:layout_height="wrap_content"
         android:background="@color/topBarColor"
         android:text="Create New"
-        app:layout_constraintEnd_toStartOf="@+id/buttonScanQR"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/buttonManageDebtors"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonManageDebtors"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:background="@color/topBarColor"
+
+        android:text="Manage Debtors"
+        app:layout_constraintEnd_toStartOf="@+id/buttonScanQR"
+        app:layout_constraintStart_toEndOf="@+id/buttonNewItem" />
 
     <Button
         android:id="@+id/buttonScanQR"
@@ -25,8 +34,7 @@
 
         android:text="Scan QR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/buttonNewItem" />
+        app:layout_constraintStart_toEndOf="@+id/buttonManageDebtors" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewMain"
@@ -45,6 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/totalSumColor"
+        android:textColor="@color/white"
         android:text="Check total"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
