--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#029f53</color>
+    <color name="colorPrimaryDark">#5d608217</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="topBarColor">#ff8800</color>
-    <color name="totalSumColor">#d32f2f</color>
-    <color name="cardViewBackColor">#616161</color>
+    <color name="topBarColor">#66bb6a</color>
+    <color name="totalSumColor">#1e88e5</color>
+    <color name="cardViewBackColor">#212121</color>
     <color name="defaultTextColor">#ffffff</color>
-    <color name="buttonCheckMore">#9e9e9e</color>
-    <color name="buttonShareQR">#aed581</color>
+    <color name="buttonCheckMore">#b71c1c</color>
+    <color name="buttonShareQR">#43a047</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 </resources>
