QRAddContact by scan and LoginActivity added
Using mac adress as device uid

--- a/app/src/main/res/layout/buildqr_activity.xml
+++ b/app/src/main/res/layout/buildqr_activity.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text='Scan this QR by using "SCAN_QR" button'
+        android:text='Scan this QR by using "SCAN QR" button'
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
