--- a/app/src/main/res/layout/managedebtors_activity.xml
+++ b/app/src/main/res/layout/managedebtors_activity.xml
@@ -9,20 +9,20 @@
         android:id="@+id/listViewDebtors"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGoBack"
+        app:layout_constraintBottom_toTopOf="@+id/buttonShareMyName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
     </ListView>
 
     <Button
-        android:id="@+id/buttonGoBack"
+        android:id="@+id/buttonShareMyName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Go back"
+        android:text="Share my contact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
