--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="buttonShareQR">#43a047</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="investaddmenu">#43a047</color>
 </resources>
