--- a/app/src/main/res/layout/invest_add.xml
+++ b/app/src/main/res/layout/invest_add.xml
@@ -54,6 +54,27 @@
             app:layout_row="1" />
 
         <TextView
+            android:id="@+id/investMyDebt"
+            style="@style/addinvest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My debt:"
+            app:layout_column="0"
+            app:layout_row="3" />
+
+        <EditText
+            android:id="@+id/editTextMyDebt"
+            style="@style/addinvest"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_column="1"
+            app:layout_columnWeight="1"
+            app:layout_row="3" />
+
+
+        <TextView
             android:id="@+id/investSum"
             style="@style/addinvest"
             android:layout_width="wrap_content"
@@ -80,7 +101,7 @@
             android:layout_height="wrap_content"
             android:text="Debtors:"
             app:layout_column="0"
-            app:layout_row="3" />
+            app:layout_row="4" />
 
         <LinearLayout
             android:id="@+id/linearlayoutDebtors"
@@ -89,7 +110,7 @@
             android:orientation="vertical"
             app:layout_column="0"
             app:layout_columnSpan="3"
-            app:layout_row="4">
+            app:layout_row="5">
 
 
         </LinearLayout>
@@ -102,6 +123,6 @@
             app:layout_column="1"
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
-            app:layout_row="3" />
+            app:layout_row="4" />
     </android.support.v7.widget.GridLayout>
 </ScrollView>
