--- a/app/src/main/res/layout/invest_cardview.xml
+++ b/app/src/main/res/layout/invest_cardview.xml
@@ -108,6 +108,34 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/MyDebt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:text="My debt:"
+                android:textColor="@color/defaultTextColor"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/MyDebtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:text="My debt"
+                android:textColor="@color/defaultTextColor"
+                android:textSize="16dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10sp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
                 android:id="@+id/TotalSum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
